--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@
 url: http://wuyb.github.com
 title: wideas
 subtitle: geeky stuff
-author: ywu
+author: Yanbo Wu
 simple_search: http://google.com/search
 description:
 
@@ -47,7 +47,8 @@ titlecase: false       # Converts page and post titles to titlecase
 
 # list each of the sidebar modules you want to include, in the order you want them to appear.
 # To add custom asides, create files in /source/_includes/custom/asides/ and add them to the list like 'custom/asides/custom_aside_name.html'
-default_asides: [asides/recent_posts.html, asides/github.html, custom/asides/about.html]
+# default_asides: [asides/recent_posts.html, asides/github.html, custom/asides/about.html]
+#default_asides: [asides/recent_posts.html, custom/asides/about.html]
 
 # Each layout uses the default asides, but they can have their own asides instead. Simply uncomment the lines below
 # and add an array with the asides you want to use.
@@ -60,7 +61,7 @@ post_asides: []
 # ----------------------- #
 
 # Github repositories
-github_user: wuyb
+github_user:
 github_repo_count: 0
 github_show_profile_link: true
 github_skip_forks: true
